testsuite/tests/properties/invalid_generics/common.lkt
from lexer_example import foo_lexer
from test import ExampleSeq

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- ExampleSeq(list*(Example("example")))
}

class FooNode implements Node[FooNode] {
}

class Example: FooNode implements TokenNode {
}
